designed index.html file and added all btn link in to index file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,175 @@
     <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 <body>
-    
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">3d social media buttons</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/3dBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/3dBtn.png" alt="button-image">
+            <figcaption>3d buttons</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">options list</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/chooseCourse.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/chooseCourse.png" alt="button-image">
+            <figcaption>list buttons</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">theme switch button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/darkModeSwitch.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="" alt="button-image">
+            <figcaption>theme button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">download button with animation</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/download.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/download.png" alt="button-image">
+            <figcaption>download button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">heart shape switch button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/heartBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/heartBtn.png" alt="button-image">
+            <figcaption>heart shape button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">colourfull button with hover effect</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/hoverColourfullBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/hoverColourfullBtn.png" alt="button-image">
+            <figcaption>hover effect button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">lock sliding button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/lockBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/lockBtn.png" alt="button-image">
+            <figcaption>lock button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">options button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/optionBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/optionBtn.png" alt="button-image">
+            <figcaption>radio button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">button with ripple effect</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/rippleBtnAnimation.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/rippleBtnAnimation.png" alt="button-image">
+            <figcaption>Ripple Effect</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">Social media share button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/shareBtn.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/shareBtn.png" alt="button-image">
+            <figcaption>Share button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">Switch button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/switch.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/switch.png" alt="button-image">
+            <figcaption>Switch button</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
+            <h1 class="btn-title">Enable|Disable|switch button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/switch1.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/switch1.png" alt="switch-button">
+            <figcaption>switch button</figcaption>
+        </figure>
+    </section>
 </body>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
