--- a/buttons/rippleBtnAnimation.html
+++ b/buttons/rippleBtnAnimation.html
@@ -19,6 +19,9 @@
         justify-content: center;
         background: #350048;
       }
+      .buttons{
+        text-align: center;
+      }
       .buttons .button {
         position: relative;
         color: #fff;
