--- a/buttons/3dBtn.html
+++ b/buttons/3dBtn.html
@@ -75,6 +75,13 @@
       .btn:nth-child(4){
         background:#ff0000;
       }
+      @media screen and (max-width:480px) {
+        .btn-wrapper {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 1rem;
+      }
+      }
     </style>
   </head>
   <body>
