dark mode image add

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </button>
         </article>
         <figure class="btn-img">
-            <img src="" alt="button-image">
+            <img src="./images/darkModeSwitch.png" alt="button-image">
             <figcaption>theme button</figcaption>
         </figure>
     </section>
