new bubbles effect button added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <section class="all-btn-links">
         <article class="about-btn">
+            <h1 class="btn-title">bubbles effect button</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
+            <button class="link">
+                <a href="./buttons/bubbles.html" target="_blank">Visite</a>
+                <ion-icon name="arrow-forward-outline"></ion-icon>
+            </button>
+        </article>
+        <figure class="btn-img">
+            <img src="./images/bubbles.png" alt="button-image">
+            <figcaption>3d buttons</figcaption>
+        </figure>
+    </section>
+    <section class="all-btn-links">
+        <article class="about-btn">
             <h1 class="btn-title">3d social media buttons</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem enim expedita cum vero commodi molestias, tempora laborum, incidunt quas, necessitatibus alias eum. Perferendis, perspiciatis! Repudiandae est sed voluptates quod cum?</p>
             <button class="link">
